Simpler HTML customisation

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-architect
+title: w1f1
+description: Wifi Hacking Tools Collection
+github:
+  repository_url: https://github.com/sensepost/hostapd-mana/wiki
